[project]
name = "SUSM-Blog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mornie", email = "Woyerpa@outlook.com"},
    {name = "SUS", email = "None"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = "GNU3.0"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
