[project]
name = "SUSM-Blog-Backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mornie", email = "Woyerpa@outlook.com"},
    # {name = "SUS", email = "None"},
]
dependencies = [
    "fastapi>=0.111.1",
    "uvicorn[standard]>=0.30.3",
]
requires-python = ">=3.12"
readme = "README.md"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
