[project]
name = "SUSM-Blog-Launcher"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mornie", email = "Woyerpa@outlook.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-3.0"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
